--- a/CSS/contato.css
+++ b/CSS/contato.css
@@ -172,8 +172,11 @@ body,html{
         width: 100%;
     }
     .formulario{
-        width: 90%;
-        margin: 15px auto;
+        width: 100%;
+    }
+    .corpo-formulario{
+        margin: 0%;
+        margin-right: 0%;
     }
     #nav-top{
         margin-bottom: 16px;
@@ -184,23 +187,28 @@ body,html{
     .final{
         width: 85%;
     }
-    .corpo-formulario{
-        margin: 0%;
-        margin-right:0%;
+    .subs{
+        display: flex;
+        width: 66%;
+        font-size: 13px;
+        height: 10%;
     }
     .lista{
-        width:auto;
-        font-size: 9px;
-        z-index: 0;
+        width: 90%;
+        padding: 2%;
     }
-    .drop{
-        font-size: 9px;
+    .menu-drop{
+        margin-top: 19px;
+    }
+    .modal{
+        position: fixed;
+        margin: auto;
+        z-index: 1;
     }
 }
 .modal{
     position: fixed;
-    right: 30%;
-    left: 30%;
+    margin: auto;
     width: 30%;
     backdrop-filter: blur(5px);
     background-color:#7FFFD4;
