--- a/CSS/projetos.css
+++ b/CSS/projetos.css
@@ -157,7 +157,7 @@ body,html{
 }
 @media (max-width:800px){
     .card-1{
-        width: 400px;
+        width: 300px;
     }
     .final{
         width: 400px;
@@ -168,15 +168,21 @@ body,html{
         margin-left: 40px;
         gap: 20px;
     }
-    .lista{
-        width:auto;
-        font-size: 9px;
+   .subs{
+        display: flex;
+        width: 66%;
+        font-size: 13px;
+        height: 10%;
     }
-    .drop{
-        font-size: 9px;
+    .lista{
+        width: 90%;
+        padding: 2%;
+    }
+    .menu-drop{
+        margin-top: 19px;
     }
     .texto-principal{
-        width: auto;
+        width: 350px;
     }
    
 }
